--- a/HW1.qmd
+++ b/HW1.qmd
@@ -30,12 +30,12 @@ format:
 ## Problem 2.a
 ```{r}
 #| pdf.echo: #| false
-plot(function(x) exp(-x), from=1, to=6, xlab="Flexibility", ylab="Error", main="Bias-Variance Tradeoff", col="black")
-plot(function(x) exp(-x*1.1)+.01, from=1, to=6, xlab="Flexibility", ylab="Error", main="Bias-Variance Tradeoff", col="green", add=TRUE)
-plot(function(x) exp(x-7), from=1, to=6, xlab="Flexibility", ylab="Error", main="Bias-Variance Tradeoff", col="blue", add=TRUE)
-plot(function(x) ((x-3.5)**2)/20+.06, from=1, to=6, xlab="Flexibility", ylab="Error", main="Bias-Variance Tradeoff", col="yellow", add=TRUE)
-plot(function(x)  .0001+x-x, from=1, to=6, xlab="Flexibility", ylab="Error", main="Bias-Variance Tradeoff", col="red", add=TRUE)
-legend("topright", legend=c("Bias", "Training Error", "Test Error", "Variance", "Bayes Error"), col=c("black", "green", "yellow", "blue", "red"), lty=1, cex=0.8)
+plot(function(x) exp(-x), from = 1, to = 6, xlab = "Flexibility", ylab = "Error", main = "Bias-Variance Tradeoff", col = "black")
+plot(function(x) exp(-x * 1.1) + 0.01, from = 1, to = 6, xlab = "Flexibility", ylab = "Error", main = "Bias-Variance Tradeoff", col = "green", add = TRUE)
+plot(function(x) exp(x - 7), from = 1, to = 6, xlab = "Flexibility", ylab = "Error", main = "Bias-Variance Tradeoff", col = "blue", add = TRUE)
+plot(function(x) ((x - 3.5) ** 2) / 20 + 0.06, from = 1, to = 6, xlab = "Flexibility", ylab = "Error", main = "Bias-Variance Tradeoff", col = "yellow", add = TRUE)
+plot(function(x) 0.0001 + x - x, from = 1, to = 6, xlab = "Flexibility", ylab = "Error", main = "Bias-Variance Tradeoff", col = "red", add = TRUE)
+legend("topright", legend = c("Bias", "Training Error", "Test Error", "Variance", "Bayes Error"), col = c("black", "green", "yellow", "blue", "red"), lty = 1, cex = 0.8)
 ```
 
 ## Problem 2.b
@@ -89,16 +89,16 @@ Step 2.b will inharently always the average distance of each cluster to the cent
 # Problem 5
 ## Problem 5.a
 ```{r}
-m <- matrix(c(0,0.3,0.4,0.7,0.3,0,0.5,0.8,0.4,0.5,0,0.45,0.7,0.8,0.45,0),nrow=4,ncol=4)
+m <- matrix(c(0, 0.3, 0.4, 0.7, 0.3, 0, 0.5, 0.8, 0.4, 0.5, 0, 0.45, 0.7, 0.8, 0.45, 0), nrow = 4, ncol = 4)
 
 plot(hclust(as.dist(m)))
 ```
 
 ## Problem 5.b
 ```{r}
-m <- matrix(c(0,0.3,0.4,0.7,0.3,0,0.5,0.8,0.4,0.5,0,0.45,0.7,0.8,0.45,0),nrow=4,ncol=4)
+m <- matrix(c(0, 0.3, 0.4, 0.7, 0.3, 0, 0.5, 0.8, 0.4, 0.5, 0, 0.45, 0.7, 0.8, 0.45, 0), nrow = 4, ncol = 4)
 
-plot(hclust(as.dist(m),method="single"))
+plot(hclust(as.dist(m), method = "single"))
 ```
 
 ## Problem 5.c
@@ -109,7 +109,7 @@ The clusters will be ${1,2,3}$ and ${4}$.
 
 ## Problem 5.e
 ```{r}
-m <- matrix(c(0,0.3,0.4,0.7,0.3,0,0.5,0.8,0.4,0.5,0,0.45,0.7,0.8,0.45,0),nrow=4,ncol=4)
+m <- matrix(c(0, 0.3, 0.4, 0.7, 0.3, 0, 0.5, 0.8, 0.4, 0.5, 0, 0.45, 0.7, 0.8, 0.45, 0), nrow = 4, ncol = 4)
 
 plot(rev(as.dendrogram(hclust(as.dist(m)))))
 ```
@@ -130,8 +130,8 @@ plot(hclust(dist(USArrests)))
 ## Problem 7.b
 ```{r}
 c <- cutree(hclust(dist(USArrests)), k = 3)
-for(i in 1:3){
-  print(c[c==i])
+for (i in 1:3) {
+  print(c[c == i])
 }
 ```
 
@@ -167,12 +167,14 @@ plot(Auto)
 
 ## Problem 9.b
 ```{r}
+library(ISLR)
+
 cor(Auto[1:8])
 ```
 
 ## Problem 9.c
 ```{r}
-summary(lm(mpg ~ .,Auto[1:8]))
+summary(lm(mpg ~ ., Auto[1:8]))
 ```
 
 ### Problem 9.c.i
@@ -187,23 +189,23 @@ The coefficient for the year is $0.75$, which suggests that the mpg of an otherw
 
 ## Problem 9.d
 ```{r}
-plot(lm(mpg ~ .,Auto[1:8]))
+plot(lm(mpg ~ ., Auto[1:8]))
 ```
 Everything looks relatively normal and good. The only outlier to note is $14$ in the residuals vs. leverage graph. However, leverage of $0.15$ is not large enough to warrant further investigation.
 
 ## Problem 9.e
 ```{r}
-summary(lm(mpg ~ displacement + horsepower + origin + weight + year + displacement:horsepower + displacement:origin + displacement:weight + displacement:year + horsepower:origin + horsepower:weight + horsepower:year + origin:weight + origin:year + weight:year,Auto[1:8]))
+summary(lm(mpg ~ displacement + horsepower + origin + weight + year + displacement:horsepower + displacement:origin + displacement:weight + displacement:year + horsepower:origin + horsepower:weight + horsepower:year + origin:weight + origin:year + weight:year ,Auto[1:8]))
 ```
 So displacement:origin, displacement:weight, horsepower:origin, and horsepower:year are statistically significant interactions.
 
 ## Problem 9.f
 ```{r}
-summary(lm(mpg ~ year,Auto[1:8]))
-summary(lm(mpg ~ log(year),Auto[1:8]))
-summary(lm(mpg ~ I(year^2),Auto[1:8]))
-summary(lm(mpg ~ sqrt(year),Auto[1:8]))
-summary(lm(mpg ~ sin(year),Auto[1:8]))
+summary(lm(mpg ~ year, Auto[1:8]))
+summary(lm(mpg ~ log(year), Auto[1:8]))
+summary(lm(mpg ~ I(year^2), Auto[1:8]))
+summary(lm(mpg ~ sqrt(year), Auto[1:8]))
+summary(lm(mpg ~ sin(year), Auto[1:8]))
 ```
 Most of the transformations are still highly statistically significant, except for $sin$, which is still statistically significant but to a much smaller degree.
 
