--- a/HW 2.qmd
+++ b/HW 2.qmd
@@ -23,3 +23,68 @@ p(X)&=\frac{e^{\beta_0+\beta_1 X}}{1+e^{\beta_0+\beta_1 X}} \\
 $$
 
 # Problem 2
+
+## Problem 2.a
+
+On average, $\frac{1}{10}$ of the observations will be used to make the predictions.
+
+## Problem 2.b
+
+On average, $\frac{1}{100}$ of the observations will be used to make the predictions.
+
+## Problem 2.c
+
+On average, $10^{-100}$ of the observations will be used to be used to make the predictions.
+
+## Problem 2.d
+
+As the number of features increase, fewer of the larger set will be used for inference, which will make the model seem relatively "dumber" as it sees a very local pictures and never really "understanding" a larger picture, therefore also causing really high variance and overfitting.
+
+## **Problem 2.e**
+
+CHECK THAT THIS IS THE CORRECT INTERPRETATION
+
+$$
+\begin{split}
+\left(10s\right)^{-p}&=10^{-1} \\
+s^{-p}&=10^{p-1} \\
+s^{p}&=10^{1-p} \\
+p\ln\left(s\right)&=(1-p)\ln\left(10\right) \\
+s&=10^{p^{-1}-1}
+\end{split}
+$$
+
+### p=1
+
+$$
+s=10^{1^{-1}-1}=1
+$$
+
+### p=2
+
+$$
+s=10^{2^{-1}-1}=\frac{1}{\sqrt{10}}
+$$
+
+### p=100
+
+$$
+s=10^{100^{-1}-1}=10^{-\frac{99}{100}}\approx \frac{1}{10}
+$$
+
+# Problem 3
+
+## Problem 3.a
+
+$$
+Y=\hat{\beta}_0+\hat{\beta}_1 X_1+\hat{\beta}_2 X_2=-6+40\cdot .05+1\cdot 3.5=-0.5
+$$
+
+## Problem 3.b
+
+$$
+\begin{split}
+0.5&=\hat{\beta}_0+\hat{\beta}_1 X_1+\hat{\beta}_2 X_2=-6+0.05h+3.5 \\
+h&=60
+\end{split}
+$$
