--- a/HW 2.qmd
+++ b/HW 2.qmd
@@ -46,30 +46,29 @@ CHECK THAT THIS IS THE CORRECT INTERPRETATION
 
 $$
 \begin{split}
-\left(10s\right)^{-p}&=10^{-1} \\
-s^{-p}&=10^{p-1} \\
-s^{p}&=10^{1-p} \\
-p\ln\left(s\right)&=(1-p)\ln\left(10\right) \\
-s&=10^{p^{-1}-1}
+s^{p}&=10^{-1} \\
+p\ln s&=-\ln 10 \\
+\ln s&=-p^{-1}\ln 10 \\
+s&=10^{-p^{-1}}
 \end{split}
 $$
 
 ### p=1
 
 $$
-s=10^{1^{-1}-1}=1
+s=10^{-1}=0.1
 $$
 
 ### p=2
 
 $$
-s=10^{2^{-1}-1}=\frac{1}{\sqrt{10}}
+s=10^{-0.5}\approx .32
 $$
 
 ### p=100
 
 $$
-s=10^{100^{-1}-1}=10^{-\frac{99}{100}}\approx \frac{1}{10}
+s=10^{-.01}\approx 0.98
 $$
 
 # Problem 3
@@ -77,15 +76,16 @@ $$
 ## Problem 3.a
 
 $$
-Y=\hat{\beta}_0+\hat{\beta}_1 X_1+\hat{\beta}_2 X_2=-6+40\cdot .05+1\cdot 3.5=-0.5
+Y=\sigma\left(\hat{\beta}_0+\hat{\beta}_1 X_1+\hat{\beta}_2 X_2\right)=\sigma\left(-6+40\cdot .05+1\cdot 3.5\right)=\sigma(-0.5)\approx .377
 $$
 
 ## Problem 3.b
 
 $$
 \begin{split}
-0.5&=\hat{\beta}_0+\hat{\beta}_1 X_1+\hat{\beta}_2 X_2=-6+0.05h+3.5 \\
-h&=60
+0.5&=\sigma\left(\hat{\beta}_0+\hat{\beta}_1 X_1+\hat{\beta}_2 X_2\right)=\sigma\left(-6+0.05h+3.5\right) \\
+0.5&=\sigma\left(0.05h-2.5\right)
+h\approx 50
 \end{split}
 $$
 
