--- a/HW 2.qmd
+++ b/HW 2.qmd
@@ -3,10 +3,17 @@ title: "STATS 202 Homework 2"
 format:
   html:
       code-fold: true
-  pdf:
-    fig-width: 7
-    fig-height: 7
 ---
+
+```{python}
+from ISLP import load_data
+import seaborn as sns
+import matplotlib.pyplot as plt
+import numpy as np
+
+weekly = load_data("Weekly")
+sns.set_theme(style="darkgrid")
+```
 
 # Problem 1
 
@@ -91,6 +98,19 @@ $$
 
 We would prefer the regression, because the $K=1$ KNN will have a $0\%$ error on the training data ( the NN of any data point in the training data set will just be itself ), which means that it had a $36\%$ error on the testing data. Scince the $36\%$ test error for KNN is more than the $30\%$ error on the linear regression, we would prefer the regression to classify new observations.
 
+# Problem 5
+
+## Problem 5.a
+
+```{python}
+g = sns.PairGrid(weekly, hue="Direction")
+g.map_lower(sns.kdeplot, fill=True)
+g.map_upper(sns.scatterplot)
+g.map_diag(sns.kdeplot, multiple="stack")
+g.add_legend()
+plt.show()
+```
+
 # Problem 6
 
 ## Problem 6.a
@@ -117,9 +137,30 @@ $\left(1-\frac{1}{n}\right)^n=\left(1-\frac{1}{100}\right)^{100}\approx 0.37$
 
 $\left(1-\frac{1}{n}\right)^n=\left(1-\frac{1}{10000}\right)^{10000}\approx 0.37$
 
-```{python}
-import seaborn as sns
-import numpy as np
+## Problem 6.g
 
-np.arange(5)
+```{python}
+x = np.arange(1,10000)
+y = (1-1/x)**x
+sns.lineplot(y)
+plt.show()
 ```
+
+$\left(1-\frac{1}{n}\right)^n$ increases and asymptotes to $e^{-1}$.
+
+## Python 6.h
+
+```{python}
+rng = np.random.default_rng(10)
+store = np.empty(10000)
+for i in range(10000):
+  store[i] = np.sum(rng.choice(100, replace=True) == 4) > 0
+np.mean(store)
+```
+
+```{python}
+np.random.seed(10)
+np.mean(np.random.randint(1,100,10000) == 4)
+```
+
+These are both very different from the estimate of $\left(1-\frac{1}{100}\right)^{100}=.37$; the python ones are significantly lower and the R is is significantly higher.
